game working, not styled yet, and wins/losses can stack after game is over

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,13 @@
+body {
+  text-align: center;
+}
+
 .crystal-image {
   width: 200px;
   height: 200px;
+}
+
+p {
+  font-size: 1.5em;
+  text-align: center;
 }
