--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,39 @@
 body {
   text-align: center;
+  background-image: url(../images/folk-pattern-black.png);
+  color: beige;
+}
+
+header {
+  padding-top: 5%;
+  font-size: 2em;
+}
+
+#wrapper {
+  padding: 5%;
 }
 
 .crystal-image {
   width: 200px;
   height: 200px;
+  margin: 5px;
+}
+
+#current-number {
+  font-size: 1.5em;
+  margin: 1%;
+}
+
+#wins-losses {
+  font-size: 1.5em;
+}
+
+button {
+  height: 20%;
+  width: 20%;
+  font-size: 150%;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-weight: bold;
 }
 
 p {
